--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Duck Devs</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="shortcut icon" href="img/gamepad.svg" type="image/x-icon" />
+    <title>Duck Devs</title>
   </head>
   <body class="body">
     <nav class="navbar">
-      <ul class="navbar-nav"></ul>
+      <ul class="navbar-nav">
+        <li class="list">
+          <a href="games.html" class="navbar-link" target="_blank">
+            <span class="link-test">GAMES</span>
+          </a>
+          <a href="#" class="navbar-link">
+            <span class="link-test">CONTACT</span>
+          </a>
+          <a href="#" class="navbar-link">
+            <span class="link-test">TEST</span>
+          </a>
+        </li>
+      </ul>
     </nav>
     <main>
       <div class="container">
