made stuff mobile friendly

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="shortcut icon" href="img/gamepad.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon" />
     <title>Duck Devs</title>
   </head>
   <body class="body">
@@ -72,5 +72,6 @@
         </p>
       </div>
     </main>
+    <nav class="bottom"></nav>
   </body>
 </html>
